Finance::Dogechain Changelog
---------------------------

{{$NEXT}}

1.20210524.0142 2021-05-23 18:42:16-07:00 America/Los_Angeles
    - improved documentation
    - added helper methods, including block/transaction helpers

1.20210418.2306 2021-04-18 16:06:33-07:00 America/Los_Angeles
    - released the first version on an unsuspecting world