@@ -2,6 +2,7 @@ Finance::Dogechain Changelog
 ---------------------------
 
 {{$NEXT}}
+    - improved coinbase block handling and Block documentation
 
 1.20210524.0142 2021-05-23 18:42:16-07:00 America/Los_Angeles
     - improved documentation
